# agronexus_ai

./: .env.example  .gitignore  CLAUDE.md  PROMPT_FRONTEND_UPDATE.md  PROMPT_IONIC_FRONTEND.md  README.md  chat_history.sql  mcp_server.py  pyproject.toml  requirements.txt  schema.sql  supabase_migration.sql  supabase_schema.sql  test_optimization.py  test_supabase.py  verify_key.py
.agent/skills/backend-fastapi-iot/: SKILL.md  climate.md  crops.md  devices.md  irrigation.md  knowledge.md  prompt.md  rules.md  soil.md
.agent/skills/deploy-vercel-production/: SKILL.md
.agent/skills/frontend-ionic-vue/: SKILL.md
.agent/skills/gemini-ai-agent/: SKILL.md
.agent/skills/iot-anomaly-detection/: SKILL.md
ai/: knowledge.md  prompt.md  rules.md
api/: index.py
app/: config.py  llm.py  main.py  prompts.py
app/api/: deps.py
app/api/routes/: auth.py  chat.py  (+5 more)
app/core/: config.py  database.py  security.py
app/repositories/: base.py  chat.py  security.py  sensor.py
app/routers/: auth.py  chat.py  dashboard.py  iot.py
app/schemas/: __init__.py
app/services/: iot_service.py  parser_service.py  security.py  state_service.py  supabase_service.py
database/: cleanup_db.sql
database/migrations/: schema_v1.sql
database/seeds/: seed_v1.py
docs/: FRONTEND_SYNC_PLAN.md  HARDWARE_GUIDE.md  PROMPT_FRONTEND_SESSIONS.md
firmware/: agronexus_esp32c6.ino
tests/: test_connection.py  test_edge_cases.py  test_iot_bulk.py  test_iot_telemetry.py  test_login_report.py  test_optimization.py  test_proactivity.py  test_prompt.py  test_rag_dynamic.py  test_transmission.py
(+20 files in other folders)
